--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,95 @@
+@import url("https://fonts.googleapis.com/css2?family=Birthstone&family=Grechen+Fuemen&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Varela+Round&display=swap");
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --black: #0e2525;
+  --primary: #86a9ac;
+  --secondary: #71999c;
+  --button: #577c7c;
+  --white: #d5deda;
+
+  --font: "Noto Sans", sans-serif;
+  --scriptFont: "Birthstone", cursive;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.scripted {
+  font-family: var(--scriptFont);
+}
+
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+.btn-block-stack {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  width: 100svw;
+  height: auto;
+  overflow-x: hidden;
+  font-family: var(--font);
+  background-color: var(--black);
+  color: var(--white);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  display: grid;
+  place-items: center;
+  min-height: 100vh;
+}
+
+.greeting {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 90dvh;
+  padding-top: 1rem;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.skills {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--primary);
+  color: var(--black);
+  padding-block: 1rem;
+}
+
+.collab {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  padding-block: 3rem;
+}
+
+@media screen and (max-width: 400px) {
+  .collab {
+    flex-direction: column;
+    align-items: center;
+    gap: 3rem;
+  }
 }
