--- a/src/components/styles/Footer.module.css
+++ b/src/components/styles/Footer.module.css
@@ -7,7 +7,7 @@ footer.footer {
   padding: 1rem;
   background-color: var(--secondary);
   margin-top: 1rem;
-  padding: 5rem 0 4rem 0;
+  padding: 5rem 0.6rem 4rem 0.6rem;
 }
 
 footer.footer .roles {
