--- a/src/components/styles/Footer.module.css
+++ b/src/components/styles/Footer.module.css
@@ -7,13 +7,13 @@ footer.footer {
   padding: 1rem;
   background-color: var(--secondary);
   margin-top: 1rem;
-  padding: 5rem 0.6rem 4rem 0.6rem;
+  padding: 5rem 0 4rem 0;
 }
 
 footer.footer .roles {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   font-size: 0.8rem;
 }
